<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="movie_icon">movie icon</string>
    <string name="setting">Setting</string>
    <string name="movie_image">Movie Image</string>
    <string name="title">Money Heist</string>
    <string name="desc">Drop back in with the most iconic skateboarding games ever made. Play Tony Hawk\'s Pro Skater Tony Hawk\'s Pro Skater 2 in one epic collection, rebuilt from the ground up in incredible HD. All the pro skaters, levels and tricks are back and fully-remastered, plus more. Skate in super crisp 120 FPS at 1080P or 60 FPS in native 4K. Watch the levels come to life using sharper dynamic shadows, reflections, and lens flare, plus enhanced skater textures. The PS5 enhancements don’t stop at audio and visual upgrades, either. Major features include: 120 FPS @1080p Native 4k @60FPS SSD Immediacy Haptic feedback via the DualSense wireless controller Spatialized Audio High Fidelity Atmospherics Activities and Game Help Cross-Gen Progression</string>
    <string name="rating_image">Rating image</string>
    <string name="rating">9.8</string>
    <string name="tab_movie">Movies</string>
    <string name="tab_tv_show">TV Shows</string>
    <string name="genre">Thriller / Action</string>
    <string name="synopsis">SYNOPSIS</string>
    <string name="title_header">TITLE</string>
    <string name="genre_header">GENRE</string>
    <string name="rate_header">RATE</string>
    <string name="poster">poster</string>
    <string name="date_release">Date Release</string>
    <string name="rilsi">Date Release</string>


</resources>