package com.example.moviecatalogue.views

import androidx.recyclerview.widget.RecyclerView
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import com.example.moviecatalogue.R
import com.example.moviecatalogue.repositories.MovieRepository
import com.example.moviecatalogue.viewmodels.DetailViewModel
import com.example.moviecatalogue.viewmodels.MainViewModel
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith


@RunWith(AndroidJUnit4::class)
@LargeTest
class MainActivityTest{

    private lateinit var mainViewModel: MainViewModel
    private lateinit var detailViewModel: DetailViewModel

    @get:Rule
    var activityRule = ActivityScenarioRule(MainActivity::class.java)



    @Test
    fun loadMovies() {
        onView(withId(R.id.rv_movie)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_movie)).perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(dummyMovie.size))
    }

    @Test
    fun loadDetailMovie() {
//        onView(withId(R.id.rv_movie)).perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(0, click()))
//        onView(withId(R.id.tv_title)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_title)).check(matches(withText(dummyMovie[0].movieName)))
//        onView(withId(R.id.tv_rating)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_rating)).check(matches(withText(dummyMovie[0].movieRate)))
//        onView(withId(R.id.tv_genre)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_genre)).check(matches(withText(dummyMovie[0].movieGenre)))
//        onView(withId(R.id.tv_desc)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_desc)).check(matches(withText(dummyMovie[0].movieDesc)))
//        onView(withId(R.id.iv_poster)).check(matches(isDisplayed()))
//        onView(withId(R.id.iv_poster)).check(matches(withContentDescription(dummyMovie[0].moviePoster)))
    }

    @Test
    fun loadTvShows() {
        onView(withText("TV Shows")).perform(click())
        onView(withId(R.id.rv_tvShow)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_tvShow)).perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(dummyMovie.size))
    }


}